# ipc

./: CMakeLists.txt  LICENSE  README.md  libipc.pc.in
include/: Ipc.hpp
src/: Ipc.cpp
tests/: CMakeLists.txt  client.cpp  client_sendrecv.cpp  server.cpp  test.cpp
